# CC-Adapter

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README_JA.md  README_ZH_HANS.md  README_ZH_HANT.md  config-example.toml
docs/: agent-install.md
src/: config.rs  error.rs  main.rs  server.rs
src/auth/: callback_server.rs  mod.rs  oauth.rs  token_store.rs
src/convert/: mod.rs  request.rs  request_responses.rs  response.rs  response_responses.rs
src/providers/: chatgpt.rs  mod.rs  openai.rs
src/types/: anthropic.rs  mod.rs  openai.rs  responses.rs
