[package]
name = "claude-adapter"
version = "0.4.0"
edition = "2024"
description = "API adapter that lets Claude Code use OpenAI/Grok/ChatGPT providers"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = "0.1"
sha2 = "0.10"
base64 = "0.22"
open = "5"
dirs = "6"
rand = "0.9"
